Transfer weights function does not account for mirror #38265

Closed
opened 2014-01-17 17:37:32 +01:00 by Zauber Paracelsus · 9 comments

System Information
64bit Linux Mint 16
Linux Kernel 3.11.0
nVidia GTX 650 Ti, driver 319.32

Blender Version
Broken: 2.69.0 r60991

Short description of error
When in weight painting mode and transferring the weights from an object that uses the mirror modifier to one that doesn't, the

Exact steps for others to reproduce the error

  1. Model an object, and set it to use the mirror modifier
  2. Model another object of similar shape, set to use the mirror modifier as well.
  3. Apply the mirror modifier on the second object.
  4. Create an armature, and parent the first object to it, with automatic weights.
  5. Parent the second object to the armature, with empty vertex groups
  6. Deselect all, select the first object, and then select the second object. Make sure the first object is still selected.
  7. Go into weight painting mode, and click the "Transfer Weights" option in the tool shelf.
**System Information** 64bit Linux Mint 16 Linux Kernel 3.11.0 nVidia GTX 650 Ti, driver 319.32 **Blender Version** Broken: 2.69.0 r60991 **Short description of error** When in weight painting mode and transferring the weights from an object that uses the mirror modifier to one that doesn't, the **Exact steps for others to reproduce the error** 1) Model an object, and set it to use the mirror modifier 2) Model another object of similar shape, set to use the mirror modifier as well. 3) Apply the mirror modifier on the second object. 4) Create an armature, and parent the first object to it, with automatic weights. 5) Parent the second object to the armature, with empty vertex groups 6) Deselect all, select the first object, and then select the second object. Make sure the first object is still selected. 7) Go into weight painting mode, and click the "Transfer Weights" option in the tool shelf.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus

Added subscribers: @cyborgmuppet, @ideasman42, @brecht

Added subscribers: @cyborgmuppet, @ideasman42, @brecht

The transfer weight function doesn't take modifiers of the source mesh into account. This is fairly easy to fix, see this patch transfer_weight_from_dm.diff.

But now I'm not so sure if this should be considered a bug. In this case it's useful, but if for example one of the meshes has a subsurf modifier, or both meshes have it, then this patch is not going to work well. Should there be some option to take modifiers into account, or should the user just (temporarily) apply the modifiers when transferring weights?

@cyborgmuppet and @ideasman42, what do you think?

The transfer weight function doesn't take modifiers of the source mesh into account. This is fairly easy to fix, see this patch [transfer_weight_from_dm.diff](https://archive.blender.org/developer/F71044/transfer_weight_from_dm.diff). But now I'm not so sure if this should be considered a bug. In this case it's useful, but if for example one of the meshes has a subsurf modifier, or both meshes have it, then this patch is not going to work well. Should there be some option to take modifiers into account, or should the user just (temporarily) apply the modifiers when transferring weights? @cyborgmuppet and @ideasman42, what do you think?

This issue was referenced by blender/blender-addons-contrib@386d3a9cfb

This issue was referenced by blender/blender-addons-contrib@386d3a9cfbed27b4a9ef5e478d50f38a068f03fe

This issue was referenced by 386d3a9cfb

This issue was referenced by 386d3a9cfbed27b4a9ef5e478d50f38a068f03fe

Committed it now anyway, since this would actually crash because it was using the vertex coordinates array from the modified mesh and vertex weights array from the unmodified mesh. As far as I can tell the intention was always to use the modified mesh, so this fix doesn't really break any working behavior.

Committed it now anyway, since this would actually crash because it was using the vertex coordinates array from the modified mesh and vertex weights array from the unmodified mesh. As far as I can tell the intention was always to use the modified mesh, so this fix doesn't really break any working behavior.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 386d3a9cfb.

Closed by commit 386d3a9cfb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38265
No description provided.